--- a/Bakery/style/style480-599.css
+++ b/Bakery/style/style480-599.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 480px) and (max-width: 599px) {
     nav {
         width: 80%;
         max-width: auto;
@@ -63,7 +63,13 @@
     }
     .text-box h3 {
         font-size: 20px;
+        width: auto;
     }
+
+    .inner-container {
+        width: 98%;
+    }
+
     /*SECTION1*/
     .chef {
         height: auto;
@@ -85,13 +91,13 @@
     .best-choice .inner-container {
         min-width: auto;
         height: 100%;
-        width: 80%;
+        width: 90%;
     }
     .best-choice .inner-container .left-col {
         float: none;
-        height: 527px;
+        height: 462px;
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 80px;
     }
     .best-choice .inner-container .right-col {
         float: none;
@@ -99,12 +105,36 @@
         height: 527px;
         position: relative;
     }
+    .best-choice .inner-container .right-col .slider .slider-inner .slider-inner-inner a img {
+        width: 60px;
+        height: 60px;
+    }
+    .best-choice a {
+        margin-left: 10px;
+    }
     .minutes {
-        top: -15px;
-        right: -60px;
+        top: -70px;
+        right: -10px;
+        width: 150px;
+        height: 150px;
+        padding-top: 15px;
+    }
+    .minutes h6 {
+        line-height: 27px;
+        font-size: 80px;
+    }
+    .minutes h4 {
+        margin-top: 35px;
     }
     .slider {
-        width: 483px;
+        width: 100%;
+        height: 60px;
+    }
+    .slider-inner {
+        width: 200px;
+    }
+    .right-arrow-icon, .left-arrow-icon {
+        top: 15px;
     }
     /*SECTION3*/
     .breakfast {
@@ -143,38 +173,33 @@
     }
     .sandwich-pic aside {
         height: 510px;
-        top: -25px;
-        right: -30px;
-        width: 170px;
-    }
-    .minutes {
-        top: -68px;
-        right: -20px;
-        width: 170px;
-        height: 170px;
+        top: 5px;
+        right: 0;
+        width: 150px;
     }
     .minutes h6 {
         line-height: 60px;
     }
     .sandwich-pic aside .minutes.transparent {
-        height: 170px;
+        height: 150px;
     }
     .sandwich-pic aside .minutes.transparent:first-child {
-        height: 169px;
+        height: 149px;
     }
     .sandwich-pic .recipe {
-        bottom: -25px;
+        bottom: 20px;
         left: -5px;
     }
     /*FOOTER*/
     footer {
-        height: 200px;
+        height: 310px;
     }
     footer .inner-container {
         width: 100%;
     }
-    footer .logotype .logo {
-        font-size: 24px;
+    footer .nav-bar, footer .logotype {
+        float: none;
+        width: 100%;
     }
 }
 
