fixed service sections representation

--- a/Atlantida/elenatafeenko/less/main.less
+++ b/Atlantida/elenatafeenko/less/main.less
@@ -340,17 +340,18 @@ header {
     }
     .services-container {
       width: 100%;
-      height: 385px;
       margin-top: 65px;
+      padding-bottom: 50px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
 
       .serv {
-        float: left;
         width: 23%;
-        height: 100%;
+        padding-bottom: 10px;
         background-image: url(../image/index-page/main/section2/border.png);
-        background-size: contain;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
-        margin-right: 2.5%;
         &:last-child {
           margin-right: 0;
         }
@@ -367,13 +368,10 @@ header {
           background-image: url(../image/index-page/main/section2/service-icon-4.png);
         }
         .serv-inner {
-
-
           background-position: top center;
           background-size: auto;
           background-repeat: no-repeat;
           width: 100%;
-          height: 100%;
           margin-top: -9px;
           padding-top: 40px;
 
