--- a/Atlantida/elenatafeenko/less/main.less
+++ b/Atlantida/elenatafeenko/less/main.less
@@ -42,6 +42,7 @@ header {
   background-color: @bg-color-light;
   position: fixed;
   top: 0;
+  z-index: 1;
 
   .inner-container {
     height: 63px;
@@ -61,6 +62,7 @@ header {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        cursor: pointer;
 
         img {
           height: 29px;
@@ -95,7 +97,7 @@ header {
             line-height: 63px;
             display: inline-block;
 
-            &:hover {
+            &:hover, &.active {
               color: @-header-text-color-dark;
             }
           }
