removed lesson 1 and 2

--- a/Atlantida/elenatafeenko/less/application.less
+++ b/Atlantida/elenatafeenko/less/application.less
@@ -2,3 +2,5 @@
 @import "main.less";
 @import "main1024-1279.less";
 @import "main768-1023.less";
+@import "main600-767.less";
+@import "main480.less";
