--- a/Atlantida/elenatafeenko/less/main.less
+++ b/Atlantida/elenatafeenko/less/main.less
@@ -489,6 +489,7 @@ header {
       }
       &.right {
         float: right;
+        clear: right;
         .event-inner {
           padding: 20px 55px 25px 15px;
         }
@@ -498,6 +499,7 @@ header {
       }
       &.left {
         float: left;
+        clear: left;
         .event-inner {
           padding: 20px 15px 25px 55px;
         }
