--- a/Atlantida/elenatafeenko/less/main600-767.less
+++ b/Atlantida/elenatafeenko/less/main600-767.less
@@ -1,97 +1,220 @@
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 600px) and (max-width: 767px) {
   .inner-container {
     width: 98%;
   }
-  header .inner-container .logo a .logotype {
-    font-size: 14px;
+
+  header .inner-container .logo a {
+    .logotype {
+      font-size: 12px;
+    }
+    img {
+      height: 23px;
+    }
   }
+
   header .inner-container nav {
-    flex-basis: 500px;
+    flex-basis: 435px;
+    padding-right: 15px;
   }
+
   header .inner-container nav ul li a {
     font-size: 10px;
   }
+
+  header .social {
+    display: none;
+  }
+
+  .slider .slider-inner .slide .inner-container .text .for-h1 {
+    width: 400px;
+    height: 85px;
+
+    h1 {
+      font-size: 30px;
+    }
+  }
+
   .slider .controls {
     width: 95%;
   }
+
   .about-us {
     padding-top: 50px;
+    height: 1170px;
   }
+
   .about-us .inner-container .block-top {
-    height: 772px;
+    height: 852px;
   }
+
   .about-us .inner-container .block-top article {
-    height: 447px;
+    height: 527px;
     padding: 20px 30px 0 30px;
   }
-  .services {
-    height: 900px;
+
+  .about-us .inner-container .block-bottom {
+    width: 100%;
+    .advantage h4 {
+      width: 50%;
+    }
   }
+
+  .services {
+    height: 935px;
+  }
+
   .services .inner-container {
     padding-top: 20px;
   }
+
   .services .inner-container p {
     width: 100%;
   }
+
   .services .inner-container .services-container {
     flex-wrap: wrap;
+    margin-top: 35px;
   }
+
   .services .inner-container .services-container .serv {
     width: 48%;
-    margin-bottom: 45px;
+    margin-bottom: 35px;
     padding-bottom: 25px;
   }
+
   .services .inner-container .services-container .serv .serv-inner p {
     width: 90%;
   }
+
   .history {
-    height: 1420px;
+    height: 1500px;
   }
+
   .history .inner-container {
     padding-top: 20px;
   }
-  .history .inner-container .art-text {
-    margin-bottom: 35px;
+
+  .history .inner-container .event.right {
+    padding-left: 20px;
+    padding-right: 0;
   }
+
+  .history .inner-container .event.left {
+    padding-left: 0;
+    padding-right: 20px;
+  }
+
+  .history .inner-container .event .event-inner .date {
+    margin-bottom: 10px;
+  }
+
+  .history .inner-container .art-text {
+    margin-bottom: 25px;
+  }
+
   .history .inner-container .event.right .event-inner, .history .inner-container .event.left .event-inner {
     padding: 10px 10px 15px 10px;
   }
+
+  .history .inner-container .event.fifth {
+    margin-top: -10px;
+  }
+
   .history .inner-container .event.sixth {
-    margin-bottom: 35px;
+    margin-bottom: 0;
+    margin-top: 46px;
   }
+
   .team {
-    height: 690px;
+    height: 630px;
   }
+
   .team .inner-container {
     padding-top: 20px;
   }
+
   .team .inner-container .art-text {
     margin-bottom: 35px;
   }
+
   .team .inner-container .team-items {
     width: 98%;
+    height: 300px;
   }
+
   .portfolio {
-    height: 939px;
+    height: 1759px;
   }
+
   .portfolio .inner-container {
     height: 381px;
     padding-top: 20px;
   }
+
   .portfolio .photos .col {
-     height: 560px;
-   }
-  .prices .inner-container {
-    padding-top: 20px;
+    height: 689px;
+    width: 50%;
   }
+
+  .prices {
+    height: 1539px;
+
+    .inner-container {
+      padding-top: 20px;
+    }
+  }
+  .prices .inner-container .art-text {
+    margin-bottom: 35px;
+  }
+  .prices .inner-container .plans {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    height: auto;
+
+    .plan-price {
+      width: 70%;
+      padding-top: 20px;
+      margin-bottom: 15px;
+      padding-bottom: 15px;
+      img {
+        margin: 10px auto;
+      }
+      .sum-price {
+        font-size: 50px;
+
+        sup {
+          font-size: 20px;
+          left: -7px;
+        }
+      }
+      .text {
+        margin: 5px 0 30px 0;
+      }
+    }
+  }
+
   .purchase .inner-container img {
-    margin-top: 20px;
+    margin-top: 35px;
+    margin-right: 15px;
   }
   .purchase .inner-container .buttons {
-    margin-top: 50px;
+    margin-top: 60px;
+    float: left;
+    padding-left: 20px;
+
+    a {
+      width: 110px;
+    }
   }
   .purchase .inner-container {
-    padding-top: 15px;
+    padding-top: 0;
+
+    .offer {
+      width: 54%;
+      h5 {
+        font-size: 14px;
+      }
+    }
   }
   .blog {
     height: 1892px;
@@ -106,19 +229,19 @@
     width: 50%;
   }
   .blog .blog-container .col article {
-    padding: 47px 0 0 30px;
+    padding: 20px 0 0 20px;
   }
   .blog .blog-container .col article .art-text {
-    width: 80%;
+    width: 95%;
     margin-top: 15px;
     line-height: 22px;
   }
   .clients {
-    height: 1058px;
+    height: 1088px;
   }
   .clients .inner-container {
     padding-top: 20px;
-    height: 540px;
+    height: 570px;
 
     .art-text {
       margin-bottom: 40px;
@@ -137,11 +260,15 @@
     }
   }
   .testimonials .slider .slider-inner .slider-slides .slide .client-quote {
-    font-size: 16px;
+    font-size: 15px;
     letter-spacing: 0;
+    line-height: 30px;
     span {
-      font-size: 60px;
+      font-size: 40px;
     }
+  }
+  .testimonials .slider .slider-inner .slider-slides .slide .client-name {
+    margin-top: 50px;
   }
   .contact .contact-form .inner-container .form input {
     width: 99%;
@@ -180,16 +307,3 @@
 }
 
 
-@media (min-width: 825px) and (max-width: 1023px) {
-  .blog .blog-container .col article {
-    padding: 47px 0 0 30px;
-
-    .date {
-      margin-bottom: 25px;
-    }
-    .art-text {
-      margin-top: 25px;
-      line-height: 24px;
-    }
-  }
-}
